# airflow-databricks-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow-databricks/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
airflow-databricks/dags/: config.py  etl_pipeline.py
airflow-databricks/notebooks/: bronze_ingest.py  gold_aggregate.py
airflow-databricks/tests/: test_dags.py
dags/: base_pipeline.py  config.py  etl_pipeline.py
infra/: .gitignore  databricks.yml
notebooks/: silver_transform.py
tests/: test_dags.py
