[project]
name = "airflow-databricks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.8.1",
    "apache-airflow-providers-databricks==6.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
