[project]
name = "airflow-databricks"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = []  # no packages to install, just deps

dependencies = [
    "apache-airflow==2.8.1",
    "apache-airflow-providers-databricks==6.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
]
ignore = [
    "E501",  # line too long — ruff handles this via formatter, not linter
]

# don't lint the notebooks — they use `spark` and `dbutils` as globals
# which ruff would flag as undefined
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
